--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "heroku-postbuild": "cd townService && npm install && npm run build",
         "run-townservice": "heroku local -p 3001 web",
         "lint": "cd townService && npm run-script lint && cd ../frontend && npm run-script lint && cd ../shared && npm run-script lint",
-		"zip": "npm-pack-zip"
+        "zip": "npm-pack-zip"
     },
     "repository": {
         "type": "git",
@@ -31,6 +31,7 @@
         "npm-pack-zip": "^1.3.0",
         "prettier": "^2.1.2",
         "prettier-plugin-organize-imports": "^1.1.1",
+        "ts-loader": "^9.5.1",
         "typescript": "^4.9.5"
     },
     "engines": {
@@ -48,5 +49,5 @@
         "frontend/src/components/Town/interactables/TicTacToe/TicTacToeArea.tsx",
         "frontend/src/components/Town/interactables/TicTacToe/TicTacToeBoard.tsx",
         "frontend/src/components/Town/interactables/Leaderboard.tsx"
-        ]
+    ]
 }
