alternative to chess images

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -39,8 +39,8 @@
   "include": [
     "src",
     "generated",
-    "pages"
-  ],
+    "pages", 
+    "src/components/Town/interactables/Chess/pieceimages"  ],
   "references": [
     {
       "path": "../shared/"
