--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
         "npm": "9.x.x"
     },
     "dependencies": {
+        "@firebase/firestore": "^4.4.0",
         "@types/ramda": "^0.27.34",
+        "firebase": "^10.6.0",
         "ramda": "^0.27.1",
         "typescript-is": "^0.17.0"
     },
