--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
         "typescript": "^4.9.5"
     },
     "engines": {
-        "node": "18.x.x",
+        "node": ">=18.18.0 <19.0.0",
         "npm": "9.x.x"
     },
     "dependencies": {
